--- a/css/master.scss
+++ b/css/master.scss
@@ -262,6 +262,8 @@ footer {
                 a {
                     width: $mobile-screen;
                     margin: auto;
+                    margin: 1rem 0;
+                    padding: 0;
                 }
             }
         }
